[workspace]
resolver = "3"
members = ["hashtime", "hashtime-cli", "hashtime-py"]

[workspace.package]
version = "0.1.0"
homepage = "https://github.com/songxiaocheng/hashtime"

[workspace.dependencies]
hashtime = { path = "hashtime", version = "0.1.0" }
anyhow = "1.0"
assert_cmd = "2.0"
atty = "0.2"
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
filetime = "0.2"
libc = "0.2"
nix = { version = "0.31", features = ["user"] }
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = "0.28"
rayon = "1.11"
serial_test = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
termcolor = "1.4"
walkdir = "2.5.0"
which = "8.0.0"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwindef", "winbase", "winnt"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
