[package]
name = "hashtime-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hashtime"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.15"

[dependencies]
hashtime = { path = "../hashtime" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
anyhow = "1.0"
termcolor = "1.4"
atty = "0.2"
