[package]
name = "hashtime-cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "hashtime"
path = "src/main.rs"

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true

[dependencies]
hashtime.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
anyhow.workspace = true
termcolor.workspace = true
atty.workspace = true
