[package]
name = "hashtime"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "=3.15"
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"
serial_test = "3.4"

[dependencies]
filetime = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
rayon = "1.11"
walkdir = "2.5.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["user"] }
which = "8.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwindef", "winbase", "winnt"] }
