[package]
name = "hashtime"
version.workspace = true
edition = "2024"

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc.workspace = true
serial_test.workspace = true

[dependencies]
filetime.workspace = true
openssl.workspace = true
rayon.workspace = true
walkdir.workspace = true
anyhow.workspace = true
serde.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
which.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi.workspace = true
